--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "title-case": "^3.0.3"
   },
   "dependencies": {
-    "@11ty/eleventy-img": "^2.0.1"
+    "@11ty/eleventy-img": "^2.0.1",
+    "three": "^0.148.0"
   },
   "main": ".eleventy.js"
 }
